# diar

./: .gitignore  :wq  Cargo.toml  README.md
src/: command.rs  error.rs  lib.rs  main.rs  types.rs  util.rs
src/add/: mod.rs
src/add_favorite/: mod.rs
src/clear/: mod.rs
src/clear_db/: mod.rs
src/commands/: add.rs  clear.rs  delete.rs  jump.rs  list.rs  ls.rs  rename.rs
src/delete/: mod.rs
src/delete_favorite/: mod.rs
src/domain/: command_line.rs  entity.rs  mod.rs  model.rs  repository.rs  service.rs
src/infrastructure/: command_line.rs  db.rs  db_handler.rs  error.rs  mod.rs  path.rs  repository.rs
src/interface/: presenter.rs
src/jump/: mod.rs
src/jump_dir/: mod.rs
src/list/: mod.rs
src/list_favorite/: mod.rs
src/ls/: mod.rs
src/rename/: mod.rs
src/shell/: add_command_to_bashrc.sh  diar-jump.sh
strage/: conf  db  snap.000000000000033A
tests/: lib.rs
tests/commands/: add.rs  clear.rs  delete.rs  jump.rs  list.rs  ls.rs  rename.rs
tests/domain/: model.rs
tests/infrastructure/: repository.rs
tests/infrastructure/inmemory/: db.rs  repository.rs
