[package]
name = "diar"
version = "2.3.0"
authors = ["index197511", "4afS"]
edition = "2018"
license = "MIT"
description = "A directory favorite tool in rust"
repository = "https://github.com/Index197511/diar"
readme = "README.md"
keywords = ["directory", "bookmark", "rust"]

[dependencies]
sled = "0.27"
clap = "2.31"
dirs = "2.0.2"
colored = "1.8.0"
skim = "0.8.1"
